--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/drawer": "^6.6.3",
     "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
@@ -27,9 +29,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-image-picker": "~14.3.2",
-    "@react-native-community/slider": "4.4.2"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
